# jupyterlab_fold_all_code_extension

./: .copier-answers.yml  .gitignore  .prettierignore  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml
.claude/: CLAUDE.md  JOURNAL.md
.github/workflows/: build.yml  check-release.yml
jupyter-config/: jupyter_nbconvert_config.json
jupyter-config/jupyter_server_config.d/: jupyterlab_fold_all_code_extension.json
jupyterlab_fold_all_code_extension/: __init__.py  preprocessor.py
src/: index.ts
src/__tests__/: jupyterlab_fold_all_code_extension.spec.ts
ui-tests/: package.json
ui-tests/tests/: jupyterlab_fold_all_code_extension.spec.ts
