[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab_fold_all_code_extension"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "nbconvert>=6.0"
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.entry-points."nbconvert.preprocessors"]
remove_folded_code = "jupyterlab_fold_all_code_extension:RemoveFoldedCodePreprocessor"

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls", "keywords"]

[tool.hatch.build.targets.sdist]
artifacts = ["jupyterlab_fold_all_code_extension/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_fold_all_code_extension/labextension" = "share/jupyter/labextensions/jupyterlab_fold_all_code_extension"
"install.json" = "share/jupyter/labextensions/jupyterlab_fold_all_code_extension/install.json"
"jupyter-config/jupyter_nbconvert_config.json" = "etc/jupyter/jupyter_nbconvert_config.json"
"jupyter-config/jupyter_server_config.d/jupyterlab_fold_all_code_extension.json" = "etc/jupyter/jupyter_server_config.d/jupyterlab_fold_all_code_extension.json"

[tool.hatch.build.hooks.version]
path = "jupyterlab_fold_all_code_extension/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyterlab_fold_all_code_extension/labextension/static/style.js",
    "jupyterlab_fold_all_code_extension/labextension/package.json",
]
skip-if-exists = ["jupyterlab_fold_all_code_extension/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "jupyterlab_fold_all_code_extension/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab>=4.0.0,<5'",
    "jlpm",
    "jlpm build:prod"
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]
